--- a/.gitignore
+++ b/.gitignore
@@ -5,16 +5,15 @@
 
 
 *.DS_Store
-*.DS_Store?
 
-*.DS_Store
 
-*data/
-*stimuli/
-*table/
-*training/
-*clean_data/
-*spontaneous/
-*archive/
-*20240802_data/
+data/
+stimuli/
+table/
+training/
+clean_data/
+spontaneous/
+archive/
+20240802_data/
+
 *.yml
